--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -52,8 +52,6 @@ small {
   grid-template-columns: 1fr 4fr;
   gap: 3.75rem;
   padding: 2.5rem;
-
-  height: 100vh;
 }
 
 /* ======= Aside Settings ======== */
@@ -294,4 +292,5 @@ small {
 
 footer {
   text-align: center;
+  margin-bottom: 1.25rem;
 }
