--- a/countdown/style.css
+++ b/countdown/style.css
@@ -22,10 +22,6 @@ main section {
   position: relative;
 }
 
-main section img {
-  position: absolute;
-}
-
 main section h1 {
   color: var(--purple);
   font-size: 2.25rem;
@@ -41,4 +37,42 @@ main section .hours p {
 
 main section p {
   color: var(--text-color);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  padding: 1rem;
+}
+
+.text {
+  margin-right: 5.125rem;
+}
+
+.hours p {
+  display: flex;
+  margin-right: 1rem;
+}
+
+.hours .time p {
+  font-size: 4.5rem;
+  color: var(--black);
+  position: relative;
+}
+
+.top-img {
+  position: absolute;
+  width: 1366px;
+  height: 133px;
+  left: 0px;
+  top: 0px;
+  width: 100vw;
+}
+
+.bottom-img {
+  width: 1366px;
+  height: 133px;
+  bottom: 0;
 }
